--- a/css/application.css
+++ b/css/application.css
@@ -20,7 +20,7 @@
 
 .row-div {
   display: block;
-  border: black solid 2px;
+  /*border: black solid 2px;*/
   height: 6em;
 }
 /*
@@ -38,3 +38,22 @@ img {
   border-radius: 100%;
 }
 
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    filter:alpha(opacity=50);
+    -moz-opacity:0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.5;
+    z-index: 10000;
+}
+
+.overlay a:link {
+  font-size: 7em;
+  color: red;
+  opacity: 10;
+}
