--- a/css/application.css
+++ b/css/application.css
@@ -36,28 +36,38 @@
   background-color: green;
 }*/
 
-img {
+.circle-img {
   width: 100%;
   height: auto;
   border-radius: 100%;
 }
 
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    filter:alpha(opacity=50);
-    -moz-opacity:0.5;
-    -khtml-opacity: 0.5;
-    opacity: 0.5;
-    z-index: 10000;
+.fifty-percent-size {
+  width: 50%;
+  height: auto;
+  border-radius: 100%;
 }
 
-.overlay a:link {
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  filter:alpha(opacity=50);
+  -moz-opacity:0.5;
+  -khtml-opacity: 0.5;
+  opacity: 0.5;
+  z-index: 10000;
+}
+
+.overlay-words {
   font-size: 7em;
   color: red;
-  opacity: 10;
+  opacity: 100;
+  text-align: center;
+  vertical-align: middle;
+  padding: auto;
+  margin: auto;
 }
