Add beginning code of making the circles drop.

--- a/css/application.css
+++ b/css/application.css
@@ -42,6 +42,8 @@
   border-radius: 100%;
 }
 
+.black-background { background-color: black; }
+
 .fifty-percent-size {
   width: 50%;
   height: auto;
